--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "date-fns": "4.1.0",
+    "react-day-picker": "8.10.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
