--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "lucide-react": "^0.544.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.45.6",
     "react": "^19",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
@@ -58,7 +60,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "react-day-picker": "8.10.1"
   },
   "devDependencies": {
