--- a/data/applications.json
+++ b/data/applications.json
@@ -20,5 +20,29 @@
     "commitmentAmount": "AED 500",
     "agreeCommitment": true,
     "_savedAt": "2026-02-11T09:30:32.065Z"
+  },
+  {
+    "fullName": "nasir",
+    "companyName": "alfinit",
+    "email": "coderfile@gmail.com",
+    "phone": "+91 7892752158",
+    "onePitchSentence": "abc",
+    "proofOfWork": "",
+    "commitmentAmount": "AED 500",
+    "agreeCommitment": true,
+    "_savedAt": "2026-02-11T09:48:12.109Z"
+  },
+  {
+    "fullName": "John Doe",
+    "companyName": "TechStartup",
+    "email": "john@techstartup.com",
+    "phone": "+1 234 567 8901",
+    "onePitchSentence": "We build AI solutions",
+    "proofOfWork": "https://techstartup.com",
+    "commitmentAmount": "AED 500",
+    "agreeCommitment": true,
+    "_savedAt": "2026-02-11T09:53:01.258Z",
+    "_ip": "::1",
+    "_source": "application_form"
   }
 ]
