hero section and whats app community link

--- a/data/whatsapp_signups.json
+++ b/data/whatsapp_signups.json
@@ -36,5 +36,12 @@
     "phone": "+971 50 123 4567",
     "_savedAt": "2026-02-11T09:46:47.608Z",
     "_source": "whatsapp_signup"
+  },
+  {
+    "firstName": "test22",
+    "phone": "+91 7892752158",
+    "_savedAt": "2026-02-12T14:31:04.790Z",
+    "_ip": "::1",
+    "_source": "whatsapp_signup"
   }
 ]
