--- a/data/whatsapp_signups.json
+++ b/data/whatsapp_signups.json
@@ -43,5 +43,12 @@
     "_savedAt": "2026-02-12T14:31:04.790Z",
     "_ip": "::1",
     "_source": "whatsapp_signup"
+  },
+  {
+    "firstName": "Nasir",
+    "phone": "+91 7892752154",
+    "_savedAt": "2026-02-12T16:50:47.085Z",
+    "_ip": "::1",
+    "_source": "whatsapp_signup"
   }
 ]
