--- a/package.json
+++ b/package.json
@@ -61,13 +61,18 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "date-fns": "^3.6.0",
-    "react-day-picker": "8.10.1"
+    "react-day-picker": "8.10.1",
+    "@stripe/js": "^3.6.0",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "stripe": "^13.8.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/nodemailer": "^6.4.14",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "5.7.3"
