--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "zod": "^3.24.1",
     "date-fns": "^3.6.0",
     "react-day-picker": "8.10.1",
-    "@stripe/js": "^3.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "@stripe/react-stripe-js": "^2.7.0",
     "stripe": "^13.8.0",
     "nodemailer": "^6.9.7"
