--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "@stripe/stripe-js": "^8.7.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.45.6",
-    
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "flag-icons": "^7.5.0",
     "framer-motion": "^11.0.0",
     "input-otp": "1.4.1",
     "lenis": "^1.1.13",
