--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "input-otp": "1.4.1",
     "lenis": "^1.1.13",
     "lucide-react": "^0.544.0",
-    "next": "16.1.6",
+    "next": "15.1.6",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.9.7",
     "react": "^19",
